--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -20,7 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-/* } Comment */
+} 
 body {
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
@@ -182,4 +182,3 @@ b{
 small{
     color: white;
 }
-
